--- a/README
+++ b/README
@@ -16,7 +16,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 -------------------------------------------------------------------------------
 This program has been simmering in my mind since 1993.  It finally got written
-in 2011. 
+in 2011 and is a gift to the community.
 
 Command Line Options:
 
