--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Simple Crypt a simple encryption program.
-Copyright (C) 2011-2017 Nathan A. Mourey II <nmoureyii@ne.rr.com>
+Copyright (C) 2011-2017 Nathan A. Mourey II <nmoureyii@gmail.com>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -24,13 +24,14 @@ Command Line Options:
 	-h shows the help.
 	-p Number of times to encode the file. You will be prompted to enter a
 	   different key on each pass.
+	-r removes the input file
 	-i input file
 	-o output file
 
 To Encrypt a File:
 	sc -p1 -i plaintext.txt -o cyphertext.txt
 
-	This will encrypt the plaintext.txt file and write the encoded 
+	This will encrypt the plaintext.txt file and write the encoded
 	cyphertext.txt file.  This is a single pass (-p1) and will only ask
 	for one key to encrypt the file.
 
