--- a/Changes
+++ b/Changes
@@ -13,4 +13,6 @@ May. 18 2012
 	reworked buffering.  Now using mem mapped 
 	I/O.  Still is slow with multi-gigabyte files.  
 
+Sept. 7 2017
+	Added removal of input file.
 
