Fixed README.  The -r flag is currently ignored.

--- a/README
+++ b/README
@@ -18,7 +18,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 This program has been simmering in my mind since 1993.  It finally got written
 in 2011 and is a gift to the community.
 
-****************** CURRENTLY BROKEN (DO NOT USE!) ************************
+****************** REMOVE IS CURRENTLY BROKEN (DO NOT USE!) *******************
 
 Command Line Options:
 
