--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Simple Crypt a simple encryption program.
-Copyright (C) 2011-2017 Nathan A. Mourey II <nmoureyii@gmail.com>
+Copyright (C) 2011, 2012 Nathan A. Mourey II <nmoureyii@ne.rr.com>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -15,63 +15,57 @@ You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 -------------------------------------------------------------------------------
-This program has been simmering in my mind since 1993.  It finally got written
-in 2011 and is a gift to the community.
 
-****************** REMOVE IS CURRENTLY BROKEN (DO NOT USE!) *******************
-
-Command Line Options:
+Command Line Switches:
 
 	-v switch shows the version.
 	-h shows the help.
-	-p Number of times to encode the file. You will be prompted to enter a
+	-p Number of times to encode the file. You will be prompted to enter a 
 	   different key on each pass.
-	-r removes the input file
 	-i input file
 	-o output file
 
 To Encrypt a File:
 	sc -p1 -i plaintext.txt -o cyphertext.txt
 
-	This will encrypt the plaintext.txt file and write the encoded
-	cyphertext.txt file.  This is a single pass (-p1) and will only ask
+	This will encrupt the plaintext.txt file and write the encoded 
+	cyphertext.txt file.  This is a single pass (-p1) and will only ask 
 	for one key to encrypt the file.
 
 To Decrypt a File:
 	sc -p1 -i cyphertext.txt -o plaintext.txt
-
-	In order to get the original plaintext.txt file back you need to use
-	the cyphertext file as the input and the plaintext as the out put.
-	Use the same number of passes and the same keys in the same order as
+	
+	In order to get the original plaintext.txt file back you need to use 
+	the cyphertext file as the input and the plaintext as the out put.  
+	Use the same number of passes and the same keys in the same order as 
 	you did when encrypting the plaintext.txt.
 
 WARNING:
-	(Do not encrypt yourself :^)
 	At this time Simple Crypt reads the entire file that is being encrypted
-	into memory.  It has been tested with a 1G file on a computer with 4G
-	RAM and it worked fine but was slow.  Be sure that you have enough RAM
+	into memory.  It has been tested with a 1G file on a computer with 4G 
+	RAM and it worked fine but was slow.  Be sure that you have enought RAM 
 	to encode a file.
 
 	UPDATE : As of May 18 2012:
 
-		Simple-Crypt now uses mmap() for file I/O.  Has been tested with
-	5G and 60G files on system with 4G RAM and 8G swap.  Runs slow as a file
+		Simple-Crypt now uses mmap() for file I/O.  Has been tested with 
+	5G and 60G files on system with 4G RAM and 8G swap.  Runs slow as a file 
 	copy is needed.
 
 NOTE:
 	Simple Crypt works on both binary and text files.  Open Solaris 11 should
 	work fine now.  Builds on Windows with cygwin tool chain though it needs
-	testing. Cygwin can be downloaded at http://www.cygwin.com/  Ran through
+	testing. Cygwin can be downloaded at http://www.cygwin.com/  Ran through 
 	Valgrind and removed all but one memory leak.
 
-	Also, builds on Haiku-OS (shredder 1 42211) and Open Indiana ver. 151a4
+	Also, builds on Haiku-OS (shredder 1 42211) and Open Indiana ver. 151a4 
 	x86pc 64Bit.
 
 To Build:
-
-	You will need a C compiler.  I recommend GCC.  On Linux or Unix you
-	should have a C compiler installed by default.  If not check your
-	distributions documentation on how to install it.
+	
+	You will need a C compiler.  I recomend GCC.  On Linux or Unix you 
+	should have a C compiler installed by default.  If not check your 
+	distributions documentation on how to install it. 
 
 
 -------------------------------------------------------------------------------
@@ -83,3 +77,6 @@ Be sure that you have a ~/bin and it is in your $PATH
 $ make install
 
 That's it.  Have Fun!!
+
+
+
