--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Simple Crypt a simple encryption program.
-Copyright (C) 2011-2018 Nathan A. Mourey II <nmoureyii@ne.rr.com>
+Copyright (C) 2011-2018 Nathan A. Mourey II <nmoureyii@gmail.com>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
