--- a/README
+++ b/README
@@ -50,7 +50,7 @@ WARNING:
 	UPDATE : As of May 18 2012:
 
 		Simple-Crypt now uses mmap() for file I/O.  Has been tested with 
-	5G and 60G files on system with 4G RAM and 8G swap.  Runs slow as a file 
+	5G and 60G files on a system with 4G RAM and 8G swap.  Runs slow as a file 
 	copy is needed.
 
 	UPDATE : May 16th 2018
