--- a/README
+++ b/README
@@ -68,8 +68,8 @@ NOTE:
 	x86pc 64Bit.
 
 NOTE:
-	Simple Crypt echos passwords when entered. If you would like to add this
-	feature please feel free to fork this project and I can pull your changes.
+	Simple Crypt echos passwords when entered. If you would like to change 
+	this please feel free to fork this project and I can pull your changes.
 
 To Build:
 	
