--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 Simple Crypt a simple encryption program.
-Copyright (C) 2011-2018 Nathan A. Mourey II <nmoureyii@gmail.com>
+Copyright (C) 2011-2020 Nathan A. Mourey II -- All Rights Reserved.
+Email <nmourey@gletechnologies.com> 
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
